# inactu

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_V0_CHECKLIST.md  SECURITY.md  SPEC.md  deny.toml
.cargo/: config.toml
.github/workflows/: benchmarks.yml  conformance.yml  release-artifacts.yml  release-skill.yml  security.yml
apps/inactu-control/: .env.example  Cargo.toml  README.md  compose.yaml  openapi.yaml
apps/inactu-control/src/: main.rs
apps/inactu-control/web/: .env.example  README.md  package.json
apps/inactu-control/web/app/: globals.css  layout.tsx  page.tsx
apps/inactu-control/web/app/docs/: page.tsx
cli/: hash-utils.md
cli/inactu-cli/: Cargo.toml  README.md
cli/inactu-cli/src/: constants.rs  flags.rs  keys.rs  main.rs  preflight.rs  runtime_exec.rs
cli/inactu-cli/tests/: e2e_flow.rs  inspect.rs  pack_sign.rs  receipt.rs  run.rs  threat_model_gates.rs  verify.rs
core/: README.md
core/verifier/: Cargo.toml  README.md
core/verifier/src/: lib.rs
core/verifier/tests/: capability_eval_vectors.rs  policy_vectors.rs  provenance_vectors.rs  (+3 more)
docs/: README.md  about-agents.md  conformance-matrix.md  ecosystem.md  getting-started.md  release-manifest.json  roadmap.md  threat-model-controls.md  why-not-containers.md
runtime/: README.md  transcript.md
scripts/: benchmark.sh
skills/: README.md
spec/: README.md  conformance.md  hashing.md  threat-model.md
spec/registry/: registry.md  snapshot.example.json  snapshot.schema.json
src/: lib.rs
test-vectors/: README.md
(+5 files in other folders)
